--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 		<input type="color" id="favColor" required>
 
 		<label for="likeness">Likeness</label> 
-		<input type="range" min="1" max="100" required>
+		<input type="range" id="lekeness" min="1" max="100" required>
 		
 	</form>
 
