--- a/main.html
+++ b/main.html
@@ -18,10 +18,10 @@
 		<input type="url" id="portfolio" required>
 
 		<label for="favColor">Favorite Color</label>
-		<input type="color" id="favColor" required>
+		<input type="color" id="favColor">
 
 		<label for="likeness">Likeness</label> 
-		<input type="range" id="lekeness" min="1" max="100" required>
+		<input type="range" id="likeness" min="1" max="100">
 		
 	</form>
 
